<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.ProfileFragment"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:layout_margin="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="280dp"
                android:layout_height="180dp"
                android:src="@drawable/earth"
                app:civ_border_width="2dp"
                app:civ_border_color="#a81a3550"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
            android:layout_weight="0.14"
            android:layout_margin="10dp" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_weight="0.10"
        android:layout_margin="5dp" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/nameProfileTxV"
                    android:layout_margin="1dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/placeholder_name"
                    android:nextFocusForward="@+id/fnameProfileTxV"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/fnameProfileTxV"
                    android:layout_margin="1dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/placeholder_fname"
                    android:nextFocusForward="@+id/emailProfileTxV"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/emailProfileTxV"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:hint="@string/placeholder_email"
                    android:nextFocusForward="@+id/phoneProfileTxV"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/phoneProfileTxV"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:hint="@string/placeholder_phone"
                    android:nextFocusForward="@+id/bdayProfileTxVProfileTxV"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/bdayProfileTxV"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:hint="@string/placeholder_bday"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Change Password"
                    android:id="@+id/changePasswordBtnProfile"
                    android:layout_gravity="center"
                    android:gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:id="@+id/saveBtnProfile"
                    android:layout_gravity="center"
                    android:gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Account Type : "
                    android:id="@+id/accountTypeProfileTxV"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="1dp"
                    android:gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Logout"
                    android:id="@+id/logoutBtnProfileFrag"
                    android:textColor="@color/white"
                    android:background="@color/color_logout"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
